--- a/analysis.html
+++ b/analysis.html
@@ -1089,12 +1089,12 @@
                 document.getElementById('scoreCircle').style.strokeDashoffset = offset;
             }, 100);
 
-            // ATS Dashboard - derive scores from main score with slight variations
-            const atsScore = Math.min(100, Math.max(0, data.score + Math.floor(Math.random() * 10) - 5));
-            const keywordScore = Math.min(100, Math.max(0, data.score + Math.floor(Math.random() * 15) - 7));
-            const formatScore = Math.min(100, Math.max(0, data.score + Math.floor(Math.random() * 20) - 5));
-            const headerScore = Math.min(100, Math.max(0, data.score + Math.floor(Math.random() * 10)));
-            const readabilityScore = Math.min(100, Math.max(0, data.score + Math.floor(Math.random() * 15) - 3));
+            // ATS Dashboard - use real scores from API
+            const atsScore = data.ats_score;
+            const keywordScore = data.keyword_score;
+            const formatScore = data.format_score;
+            const headerScore = data.header_score;
+            const readabilityScore = data.readability_score;
 
             document.getElementById('atsScoreValue').textContent = atsScore;
 
