--- a/app.html
+++ b/app.html
@@ -777,11 +777,11 @@
 
             <div class="action-cards">
                 <div class="action-card" onclick="showPage('analysis')">
-                    <h3>📄 Analyze Resume</h3>
+                    <h3>Analyze Resume</h3>
                     <p>Upload your resume and get detailed feedback with scores and recommendations</p>
                 </div>
                 <div class="action-card" onclick="showPage('chat')">
-                    <h3>💬 Chat with AI</h3>
+                    <h3>Chat with AI</h3>
                     <p>Have a conversation about your resume and get personalized advice</p>
                 </div>
             </div>
@@ -806,7 +806,7 @@
 
                     <div style="width: 100%; max-width: 500px; margin-bottom: 20px;">
                         <label style="font-size: 0.85rem; color: #71717a; margin-bottom: 8px; display: block;">Job
-                            Description (optional)</label>
+                            Description </label>
                         <textarea id="analysisJobDesc"
                             placeholder="Paste the job description here for a tailored analysis..."
                             style="width: 100%; min-height: 120px; padding: 16px; background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08); border-radius: 12px; color: #fff; font-family: inherit; font-size: 0.9rem; resize: vertical;"></textarea>
@@ -819,7 +819,7 @@
 
                 <div class="results-section" id="analysisResults">
                     <div class="result-card">
-                        <h3>📊 Match Score</h3>
+                        <h3>Match Score</h3>
                         <div style="display: flex; align-items: center; gap: 20px;">
                             <div class="score-circle">
                                 <svg viewBox="0 0 80 80">
@@ -841,7 +841,7 @@
 
                     <!-- ATS Dashboard -->
                     <div class="result-card">
-                        <h3>🤖 ATS Compatibility</h3>
+                        <h3>ATS Compatibility</h3>
                         <div style="display: flex; align-items: center; gap: 20px; margin-bottom: 20px;">
                             <div class="score-circle" style="width: 80px; height: 80px;">
                                 <svg viewBox="0 0 80 80" style="width: 80px; height: 80px;">
@@ -917,7 +917,7 @@
                     </div>
 
                     <div class="result-card">
-                        <h3>💡 Recommendations</h3>
+                        <h3>Recommendations</h3>
                         <ul id="analysisRecommendations" class="recommendations-list"></ul>
                     </div>
 
@@ -1192,12 +1192,12 @@
                 const offset = circumference * (1 - data.score / 100);
                 document.getElementById('analysisCircle').style.strokeDashoffset = offset;
 
-                // ATS Scores - derive from main score with variations
-                const atsScore = Math.min(100, Math.max(0, data.score + Math.floor(Math.random() * 10) - 5));
-                const keywordScore = Math.min(100, Math.max(0, data.score + Math.floor(Math.random() * 15) - 7));
-                const formatScore = Math.min(100, Math.max(0, data.score + Math.floor(Math.random() * 20) - 5));
-                const headerScore = Math.min(100, Math.max(0, data.score + Math.floor(Math.random() * 10)));
-                const readabilityScore = Math.min(100, Math.max(0, data.score + Math.floor(Math.random() * 15) - 3));
+                // ATS Scores - use real scores from API
+                const atsScore = data.ats_score;
+                const keywordScore = data.keyword_score;
+                const formatScore = data.format_score;
+                const headerScore = data.header_score;
+                const readabilityScore = data.readability_score;
 
                 document.getElementById('atsScore').textContent = atsScore + '%';
 
