Fix API URLs for production - use relative paths

--- a/frontend/analysis.html
+++ b/frontend/analysis.html
@@ -212,7 +212,7 @@
     </div>
 
     <script>
-        const API = 'http://127.0.0.1:8000';
+        const API = '';
         let analysisFile = null;
 
         async function checkStatus() {
@@ -871,7 +871,7 @@
     </main>
 
     <script>
-        const API = 'http://127.0.0.1:8000';
+        const API = '';
         let file = null;
         const textarea = document.getElementById('jobDesc');
 
