--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -102,7 +102,7 @@
     </main>
 
     <script>
-        const API = 'http://127.0.0.1:8000';
+        const API = '';
 
         async function checkStatus() {
             try {
@@ -387,7 +387,7 @@
     </main>
 
     <script>
-        const API = 'http://127.0.0.1:8000';
+        const API = '';
 
         async function checkStatus() {
             try {
