--- a/frontend/login.html
+++ b/frontend/login.html
@@ -224,7 +224,7 @@
     </div>
 
     <script>
-        const API = 'http://127.0.0.1:8000';
+        const API = '';
         let GOOGLE_CLIENT_ID = null;
 
         // Initialize Google Sign-In
