--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -239,7 +239,7 @@
     </div>
 
     <script>
-        const API = 'http://127.0.0.1:8000';
+        const API = '';
         let GOOGLE_CLIENT_ID = null;
 
         async function initGoogleSignIn() {
