--- a/frontend/chat.html
+++ b/frontend/chat.html
@@ -560,7 +560,7 @@
     </main>
 
     <script>
-        const API = 'http://127.0.0.1:8000';
+        const API = '';
         let file = null;
         let selectedOptions = new Set(['general']);
         const textarea = document.getElementById('messageInput');
