--- a/frontend/forgot-password.html
+++ b/frontend/forgot-password.html
@@ -160,7 +160,7 @@
     </div>
 
     <script>
-        const API = 'http://127.0.0.1:8000';
+        const API = '';
 
         document.getElementById('forgotForm').addEventListener('submit', async (e) => {
             e.preventDefault();
