--- a/frontend/jobs.html
+++ b/frontend/jobs.html
@@ -490,7 +490,7 @@
     </main>
 
     <script>
-        const API = 'http://127.0.0.1:8000';
+        const API = '';
         let file = null;
 
         async function checkStatus() {
