--- a/frontend/reset-password.html
+++ b/frontend/reset-password.html
@@ -144,7 +144,7 @@
     </div>
 
     <script>
-        const API = 'http://127.0.0.1:8000';
+        const API = '';
 
         // Auto-fill token from URL if present
         const urlParams = new URLSearchParams(window.location.search);
