Add Find Jobs card to dashboard

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -383,6 +383,10 @@
                 <h3>Chat with AI</h3>
                 <p>Have a conversation about your resume and get personalized advice</p>
             </a>
+            <a href="/jobs" class="action-card">
+                <h3>Find Jobs</h3>
+                <p>Discover matching job opportunities based on your skills and experience</p>
+            </a>
         </div>
     </main>
 
